# plotstyle

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new_journal_spec.md  spec_inaccuracy.md
.github/workflows/: ci.yml  release.yml
conda-recipe/: meta.yaml
docs/: changelog.md  cli.md  concepts.md  conf.py  faq.md  index.md  installation.md  quickstart.md
docs/_static/: custom.css
docs/api/: accessibility.md  export.md  figure.md  fonts.md  grayscale.md  index.md  migrate.md  overlays.md  palettes.md  preview.md  registry.md  seaborn.md  style.md  units.md  validation.md  warnings.md
docs/guides/: accessibility.md  export.md  index.md  migration.md  multi_panel.md  overlays.md  palettes.md  seaborn.md  validation.md
docs/journals/: index.md
examples/: 01_quickstart.py  02_multi_panel_figure.py  03_color_palettes.py  04_accessibility_checks.py  05_validation.py  06_export_submission.py  07_spec_diff_and_migrate.py  08_gallery_preview.py  09_registry_and_spec.py  10_context_manager_patterns.py  11_seaborn_integration.py  12_overlays.py  13_overlay_only_mode.py  13_units_and_conversions.py  14_print_size_preview.py  15_matplotlib_native_styles.py  16_latex_and_fonts.py  17_grayscale_safety.py  18_scenario_paper_workflow.py
examples/notebooks/: 01_quickstart.ipynb  02_accessibility_and_validation.ipynb  03_journal_comparison_and_migration.ipynb  04_overlays.ipynb
examples/output/paper_submission/: fig1.eps  fig2.eps
examples/output/submission_ieee/: smith_fig2.eps  smith_fig2.tiff
examples/output/submission_nature/: fig1.eps  fig1.tiff
scripts/: benchmark_import.py  generate_docs_images.py  generate_gallery.py  generate_images.py  validate_all_specs.py
src/plotstyle/: __init__.py
src/plotstyle/_compat/: __init__.py  mpl_style.py
src/plotstyle/_utils/: __init__.py  io.py  warnings.py
src/plotstyle/cli/: main.py
src/plotstyle/color/: __init__.py  _rendering.py  accessibility.py  grayscale.py  palettes.py
src/plotstyle/color/data/: conservative_colorblind.json  okabe_ito.json  safe_grayscale.json  tol_bright.json  tol_high_contrast.json  tol_light.json  tol_muted.json  tol_rainbow_1.json  tol_rainbow_10.json  tol_rainbow_11.json  tol_rainbow_12.json  tol_rainbow_13.json  tol_rainbow_14.json  tol_rainbow_15.json  tol_rainbow_16.json  tol_rainbow_17.json  tol_rainbow_18.json  tol_rainbow_19.json  tol_rainbow_2.json  tol_rainbow_20.json  tol_rainbow_21.json  tol_rainbow_22.json  tol_rainbow_23.json  tol_rainbow_3.json  tol_rainbow_4.json  tol_rainbow_5.json  tol_rainbow_6.json  tol_rainbow_7.json  tol_rainbow_8.json  tol_rainbow_9.json  tol_vibrant.json
src/plotstyle/core/: export.py  figure.py  migrate.py  style.py
src/plotstyle/engine/: fonts.py  latex.py  rcparams.py
src/plotstyle/integrations/: seaborn.py
src/plotstyle/overlays/: __init__.py  bar.toml  cjk-japanese.toml  cjk-korean.toml  cjk-simplified.toml  cjk-traditional.toml  conservative-colorblind.toml  grid.toml  high-vis.toml  latex-sans.toml  minimal.toml  no-latex.toml  notebook.toml  okabe-ito.toml  pgf.toml  presentation.toml  russian.toml  safe-grayscale.toml  scatter.toml  schema.py  si-units.toml  tol-bright.toml  tol-high-contrast.toml  tol-light.toml  tol-muted.toml  tol-rainbow-1.toml  tol-rainbow-10.toml  tol-rainbow-11.toml  tol-rainbow-12.toml  tol-rainbow-13.toml  tol-rainbow-14.toml  tol-rainbow-15.toml  tol-rainbow-16.toml  tol-rainbow-17.toml  tol-rainbow-18.toml  tol-rainbow-19.toml  tol-rainbow-2.toml  tol-rainbow-20.toml  tol-rainbow-21.toml  tol-rainbow-22.toml  (+10 more)
src/plotstyle/preview/: __init__.py  gallery.py  print_size.py
src/plotstyle/specs/: __init__.py  _templates.toml  acm.toml  acs.toml  cell.toml  elsevier.toml  ieee.toml  nature.toml  plos.toml  prl.toml  schema.py  science.toml  springer.toml  units.py  usenix.toml  wiley.toml
src/plotstyle/validation/: __init__.py  report.py
src/plotstyle/validation/checks/: __init__.py  _base.py  colors.py  dimensions.py  export.py  lines.py  typography.py
tests/test_cli/: test_main.py
tests/test_color/: test_accessibility.py  test_grayscale.py  test_palettes.py  test_rendering.py
tests/test_core/: test_export.py  test_figure.py  test_migrate.py  test_style.py
tests/test_engine/: test_fonts.py  test_latex.py  test_rcparams.py
tests/test_integrations/: test_seaborn.py
tests/test_preview/: test_gallery.py  test_print_size.py
tests/test_specs/: test_registry.py  test_schema.py  test_units.py
tests/test_utils/: test_io.py  test_warnings.py
tests/test_validation/: test_checks.py  test_report.py
